--- a/src/scss/_solana.scss
+++ b/src/scss/_solana.scss
@@ -7,7 +7,7 @@ code,
 pre {
   padding: 0.33rem;
   border-radius: $border-radius;
-  background-color: $gray-200;
+  background-color: #008cff !important;
   color: $black;
 }
 
