--- a/src/scss/_solana-variables-dark.scss
+++ b/src/scss/_solana-variables-dark.scss
@@ -5,22 +5,24 @@
 
 // Example of a variable override to change Dashkit's background color
 // Remove the "//" to comment it in and see it in action!
-$body-bg: #161b19 !default;
+$body-bg: #fff !default;
 
 $black: #232323;
-$white: #fff !default;
+// $white: #fff !default;
+$white: #232323 !default;
 $gray-600: #86b8b6;
 $gray-600-dark: #343a37 !default;
-$gray-700-dark: #282d2b !default;
-$gray-800-dark: #1e2423 !default;
-$black-dark: #141816 !default;
-$input-placeholder-color: #ccc !default;
+$gray-700-dark: #eee !default;
+// $gray-800-dark: #1e2423 !default;
+$gray-800-dark: #ffffff !default;
+$black-dark: #1c1d31 !default;
+$input-placeholder-color: #232323 !default;
 
-$primary: #1dd79b !default;
+$primary: #008CFF !default;
 $success: #26e97e !default;
 $warning: #fa62fc !default;
 $card-border-color: $gray-700-dark !default;
-$card-outline-color: #111 !default;
+$card-outline-color: #3f426c !default;
 
 $input-bg: transparent !default;
 $input-border-color: $gray-600-dark !default;
