--- a/src/scss/_solana-variables-dark.scss
+++ b/src/scss/_solana-variables-dark.scss
@@ -15,7 +15,8 @@ $gray-600-dark: #343a37 !default;
 $gray-700-dark: #eee !default;
 // $gray-800-dark: #1e2423 !default;
 $gray-800-dark: #ffffff !default;
-$black-dark: #1c1d31 !default;
+// $black-dark: #1c1d31 !default;
+$black-dark: #008CFF !default;
 $input-placeholder-color: #232323 !default;
 
 $primary: #008CFF !default;
