--- a/src/scss/_solana-variables.scss
+++ b/src/scss/_solana-variables.scss
@@ -20,7 +20,8 @@ $gray-300: #e5ebe9;
 $gray-400: #c6e6de;
 $gray-500: #abd5c6;
 $gray-600: #86b8b6;
-$gray-700: #698582;
+// $gray-700: #698582;
+$gray-700: #232323;
 $gray-800: #387462;
 $gray-900: #1b4e3f;
 $black: #232323;
